# voice2text

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
release/: setup.bat
release/Voice2Text/: whisper_transcribe.py  安装说明.txt
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  whisper_server.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  cloud_api.rs  commands.rs  lib.rs  main.rs  whisper_engine.rs
